# codefixit-manager

./: .cfmrc  MANIFEST.in  README.md  __init__.py  cfm.py  pyproject.toml  setup.py
.github/workflows/: codefixit.yml  publish.yml  python-publish.yaml  python-publish.yml  test-publish.yml
cfm/: __init__.py  cli.py
cfm/engine/: filewalker.py  filewalker.py_  transformer.py_
cfm/utils/: config.py  generator.py
engine/: __init__.py
src/: example.cpp
tests/: test_transformer.py
