[project]
name = "codefixit-manager"
version = "0.1.0"
description = "Modernize and refactor legacy codebases with AI and rule-based transforms"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "nyigoro", email = "nyigoro@gmail.com"}
]

dependencies = []

[project.scripts]
cfm = "cfm.cli:main"
